2002-04-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-halfdump-command-arguments): Add `-I e' option to
	w3m under Japanese environment.

2002-04-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-w3m.el (mime-w3m-cid-retrieve): Use `mime-decode-string',
	`mime-entity-body' and `mime-entity-encoding' instead of
	`mime-insert-entity-content' to make it work even if the entity
	buffer is multibyte.

2002-04-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-2ch.el (shimbun-2ch-request-article): Rename from
	`shimbun-request-article'.

2002-04-17  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el: New file.
	(shimbun-palmfan-news-headers): Bug fixed (catch stop tag).

2002-04-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-2ch.el (shimbun-article): Encode body content with base64.

2002-04-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-retrieve-article)
	(mew-shimbun-re-retrieve-article): Set unibyte at work buffer.

2002-04-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-2ch.el (shimbun-2ch-parse-page): Fixed regexp.
	(shimbun-headers): Fixed error URL.

	* w3m.el (w3m-check-header-tags): Renamed from w3m-check-link-tags.
	(w3m-check-header-tags): Parse base tag too.
	(w3m-rendering-buffer-1): Use it.
	(w3m-prepare-text-content): Don't use w3m-base-url.

2002-04-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-2ch.el (shimbun-request-article): Remove unbound vars.
	(shimbun-headers): Bind `ita' and `sure'.

2002-04-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-2ch.el: New file.

	* shimbun/shimbun.el (shimbun-retrieve-url): Set no-decode argument
	of w3m-retrieve as nil.

2002-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-image-insert): Replace `insert' with
	`insert-before-markers'.
	(w3m-bitmap-image-delete-internal): Delete trailing newlines.
	(w3m-insert-image): Don't check for the existence of an image.
